Connect to MongoDB

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "login_and_signup",
   "version": "1.0.0",
   "description": "Making of login and signup using MERN",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "Login",
@@ -12,5 +13,13 @@
     "MERN"
   ],
   "author": "Ketan Sharma",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.3"
+  }
 }
